# gbm_egui

./: Cargo.toml
src/: main.rs
src/app/: main_page.rs
src/functions/: gbm.rs
