[package]
name = "gbm_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
csv = "1.2.1"
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = { version = "0.21.0", features = ["datepicker", "image"] }
rfd = "0.11.3"
